--- a/Zitac.oAuth/Zitac.oAuth.csproj
+++ b/Zitac.oAuth/Zitac.oAuth.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="DecisionsSDK" Version="8.16.0" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="7.2.0" />
   </ItemGroup>
 
 </Project>
