--- a/Zitac.oAuth/Zitac.oAuth.csproj
+++ b/Zitac.oAuth/Zitac.oAuth.csproj
@@ -9,7 +9,13 @@
 
   <ItemGroup>
     <PackageReference Include="DecisionsSDK" Version="8.16.0" />
-    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="7.2.0" />
+             <Reference Include="Microsoft.IdentityModel.Tokens">
+       <HintPath>Microsoft.IdentityModel.Tokens.dll</HintPath>
+     </Reference>
+             <Reference Include="System.IdentityModel.Tokens.Jwt">
+       <HintPath>System.IdentityModel.Tokens.Jwt.dll</HintPath>
+     </Reference>
+     
   </ItemGroup>
 
 </Project>
