--- a/Zitac.oAuth/Zitac.oAuth.csproj
+++ b/Zitac.oAuth/Zitac.oAuth.csproj
@@ -1,21 +1,24 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net7.0</TargetFramework>
+    <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="DecisionsSDK" Version="8.16.0" />
              <Reference Include="Microsoft.IdentityModel.Tokens">
-       <HintPath>Microsoft.IdentityModel.Tokens.dll</HintPath>
+       <HintPath>../Microsoft.IdentityModel.Tokens.dll</HintPath>
      </Reference>
              <Reference Include="System.IdentityModel.Tokens.Jwt">
-       <HintPath>System.IdentityModel.Tokens.Jwt.dll</HintPath>
+       <HintPath>../System.IdentityModel.Tokens.Jwt.dll</HintPath>
      </Reference>
      
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="DecisionsSDK" Version="9.4.0" />
   </ItemGroup>
 
 </Project>
